--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ a {
     transition: transform 0.5s;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 }
 
