--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, html {
   
   .bg-image {
     /* The image used */
-    background-image: url("wrandifan/wrandifan.github.io/pxArt.png");
+    background-image: url("__mika_blue_archive_drawn_by_laika_sputnik2nd__b318328f3a8cd0bde46450cc0b866c90.jpg");
   
     /* Add the blur effect */
     filter: blur(8px);
