--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
   main {
       margin: auto;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      flex-direction: row-reverse;
+      justify-content: flex-end;
       align-items: center;
       height: 100%;
   }
