--- a/style.css
+++ b/style.css
@@ -1,43 +1,67 @@
-*{
+:root {
+  --line-color: #bdac9a;
+  --bg-color: #00ffff;  
+  --panel-color: #00ffff;
+  --theme-color: #29334d;
+  --text-color: #29334d;
+}
+
+body {
+    background-color: var(--bg-color);
     padding: 0;
     margin: 0;
-    box-sizing:border-box;
-    font-family: 'Arial', sans-serif;
 }
-.thename{
-    height: 100rem;
-    width:100%;
-    background-image:url(6c67ea064dde086bbf6068629d8b06667f02e44edfde1671c0b939127129a3a4.jpg);
-    filter: blur(8px);
-    background-size: cover;
-    background-position: center;
-}
-nav{
+    
+main {
+    margin: auto;
     display: flex;
-    align-items: left;
+    flex-direction: column;
     justify-content: center;
-    padding-top: 12rem;
-    padding-left: 10%;
-    padding-right: 10%;
+    align-items: center;
+    height: 100%;
 }
-.logo{
-    color: #00ffff;
-    font-size: 32px;
+
+#content {
+    background-color: var(--panel-color);
+    padding: 0.3rem;
+    border: 2px solid var(--line-color);
+    flex: 0 1 auto;
 }
-span{
+
+.plat {
+    background-color: var(--theme-color);
+    font-size: 1.6rem;
+    cursor: pointer;
+    margin-top: 0.1em;
+    text-transform: uppercase;
+    line-height: 1;
+}
+
+.plat:first-of-type {
+    margin-top: 0;
+}
+
+.plat:hover {
+    background-color: rgb(185, 166, 148);
+}
+
+a {
     color: #29334d;
-}
-nav ul li{
-    list-style-type:none;
-    display: inline-flex;
-    padding: 10px 20px;
-}
-nav ul li a{
-    color:#29334d ;
     text-decoration: none;
-    font-weight: bolder;
+    display: block;
+    padding: 0.3rem 2rem 0.3rem 0.75rem;
+    transition: transform 0.5s;
 }
-nav ul li a:hover{
-    color: #00ffff;
-    transition: .2s;
+
+a:first-letter {
+    font-size: 1.6em;
+}
+
+a:hover {
+    transform: perspective(1px) translateX(1rem);
+}
+
+hr {
+    border: none;
+    border-top: 1px solid var(--line-color);
 }
