--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav{
 }
 nav ul li{
     list-style: none;
-    display: inline-flexbox;
+    display: inline-block;
     padding: 13px 35px;
     margin: 10px;
     font-size: 18px;
