--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
 
 .plat {
     background-color: rgb(121, 183, 224);
-    font-family: "Comfortaa", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 2rem;
     cursor: pointer;
     margin-top: 0.1em;
