--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ hr {
 
 .parallax {
     /* The image used */
-    background-image: url(bluearchivebkg.jpg);
+    background-image: url(/bluearchivebkg.jpg);
   
     /* Set a specific height */
     height: 100%;
