--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ main {
   
   .parallax {
     /* The image used */
-    background-image: url(https://github.com/wrandifan/wrandifan.github.io/blob/main/bluearchivebkg.jpg);
+    background-image: url(bluearchivebkg.jpg);
     
     /* Set a specific height */
     height: 100vh;
