--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ main {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   align-items: center;
   max-width: 70%;
   width: auto;
