--- a/style.css
+++ b/style.css
@@ -95,13 +95,12 @@ main {
   text-align:right;
   font-size:1.2em;
   line-height: 1.5;
- 
+  font-family: "Nunito", sans-serif ;
   right:0;
   display: block;
   list-style-type: none;  
   position:fixed;
 }
-
 
 span {
   background-color: rgba(255, 255, 255, 0.18);
