--- a/style.css
+++ b/style.css
@@ -91,19 +91,22 @@ main {
   }
 
 
-.gachablock {
-  text-align:right;
-  font-size:1.2em;
-  line-height: 1.5;
-  font-family: "Nunito", sans-serif ;
-  right:0;
-  display: block;
-  list-style-type: none;  
-  position:fixed;
-}
-
-span {
-  background-color: rgba(255, 255, 255, 0.18);
-  display:inline-block;
+  .sitemap {
+    margin-top: 30vh; 
+    margin-right:5vw;
+    z-index:1;
+    
+    text-align:right;
+    font-size:1.2em;
+    line-height: 1.5;
+   
+    right:0;
+    display: block;
+    list-style-type: none;  
+    position:fixed;
   
-}
+  }
+  
+  span {
+    background-color: rgba(227, 222, 220,  0.8);
+    display:inline-block;
