--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ main {
     display: block;
     list-style-type: none;  
     position:fixed;
+    background-color: rgba(255,255,255,.18);
   
   }
   
