--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ main {
     justify-content: center;
     align-items: center;
     height: 100%;
+    font-family: "Nunito", sans-serif;
     
     text-align:center;
     font-size:1.2em;
