--- a/style.css
+++ b/style.css
@@ -91,33 +91,38 @@ main {
   }
 
 
-  .gblock {
-    margin: auto;
+  .gachaids {
+    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100%;
-    font-family: "Nunito", sans-serif;
-    
-    text-align:center;
-    font-size:1.2em;
-    line-height: 1.5;
-   
-    right:0;
-    list-style-type: none;  
-    position:fixed;
-    background-color: rgba(255,255,255,.18);
+    justify-content: center;
+    height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+    background-size: cover;
+    background-position: center;
   }
-   .gblock li {
-      display: flex;
-      justify-content: space-between;
-    }
-    
-  .gblock li span {
-      flex-grow: 1;
-      text-align: left;
-      padding-right: 10px;
-    }
-    
   
+  .gachaids h1 {
+    font-size: 1.5rem;
+    margin-top: 0;
+  }
+  
+  .gachaids ul {
+    padding: 0;
+    list-style-type: none;
+  }
+  
+  .gachaids li {
+    margin-bottom: 10px;
+  }
+  
+  .gachaids a {
+    color: rgba(255, 255, 255, 0.18)
+    text-decoration: none;
+  }
+  
+  .gachaids a:hover {
+    text-decoration: underline;
+  }
