--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ main {
   }
   
   .gachaids a {
-    color: rgba(255, 255, 255, 0.18)
+    color: rgba(255, 255, 255, 0.18);
     text-decoration: none;
   }
   
