--- a/style.css
+++ b/style.css
@@ -100,8 +100,18 @@ main {
     height: 100vh;
     padding: 20px;
     box-sizing: border-box;
-    background-size: cover;
-    background-position: center;
+    font-family: "Nunito", sans-serif;
+  }
+  
+  .gachaids:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: -1;
   }
   
   .gachaids h1 {
@@ -119,10 +129,11 @@ main {
   }
   
   .gachaids a {
-    color: rgba(255, 255, 255, 0.18);
+    color: #0356fc;
     text-decoration: none;
   }
   
   .gachaids a:hover {
     text-decoration: underline;
   }
+  
