maybe fixed i should do this locally and use a live server

--- a/style.css
+++ b/style.css
@@ -106,10 +106,10 @@ main {
   .gachaids:before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: 20%;
+    left: 10%;
+    right: 10%;
+    bottom: 20%;
     background-color: rgba(255, 255, 255, 0.6);
     z-index: -1;
   }
@@ -128,12 +128,5 @@ main {
     margin-bottom: 10px;
   }
   
-  .gachaids a {
-    color: #0356fc;
-    text-decoration: none;
-  }
   
-  .gachaids a:hover {
-    text-decoration: underline;
-  }
   
